style: set event description toggle button to grey

--- a/index.html
+++ b/index.html
@@ -2241,7 +2241,7 @@
   }
   .event-desc-toggle {
     font-size: 12px;
-    color: var(--red);
+    color: var(--grey);
     cursor: pointer;
     background: none;
     border: none;
